# data-engineering-zoomcamp

./: .gitattributes  .gitignore  CLAUDE.md  DEZoomcamp_dlt_Homework.ipynb  README.md  after-sign-up.md  airflow-webserver.pid  airflow.cfg  airflow.db  arch_diagram.md  asking-questions.md  awesome-data-engineering.md  cerficates.md  certificates.md  datacamp  dataset.md  dbt_project.yml  download_ny_taxi_data.sh  environment.yml  etl_parent_flow-deployment.yaml  learning-in-public.md  main.tf  my-notes.md  notes.md  notes.rmd  packages.yml  pyproject.toml  requirements-test.txt  stg_green_tripdata.sql  taxi_rides_ny.duckdb  video-title-card.ipynb  week6_homework_responses.docx  workshop-best-practices.md
.devcontainer/: .aliases  .gitconfig  Dockerfile  Microsoft.PowerShell_profile.ps1  README.md  clean-detailed.omp.json  config.fish  devcontainer.json  ella-clean-detailed.omp.json  requirements.txt
.dlt/: .sources  config.toml  secrets.toml
.github/: FUNDING.yml
00-project-complete/: README.md
01-docker-sql/: README.md
01-docker-terraform/: .gitignore  Homework 1.ipynb  README.md  Week1-Assignment.ipynb  homework.md  main.tf  (+3 more)
01-docker-terraform/docker-sql/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  pyproject.toml
01-docker-terraform/docker-sql/pipeline/docker-helper-scripts/: docker-ingest.sh  docker-pgadmin.sh  docker-postgres.sh
03-data-warehouse/extras/: .env-example  .gitignore  README.md  bq_tables_setup.sql  download_parquet.py  dtype_check.ipynb  load_yellow_taxi_data.py  pyproject.toml  web_to_gcs.py  web_to_gcs_with_progress_bar.py
07-streaming/workshop/live/: Dockerfile.flink  README.md  docker-compose.yaml  flink-config.yaml  main.py  pyproject.flink.toml  pyproject.toml
07-streaming/workshop/live/notebooks/: consumer_db.ipynb  producer.ipynb  producer.py
07-streaming/workshop/live/src/job/: aggregation_job.py  pass_through_job.py
07-streaming/workshop/live/src/producers/: models.py  producer_realtime.py
cohorts/2026/workshops/dlt/: README.md  analysis.py  dlt_Pipeline_Overview.ipynb  dlt_homework.md  open_library_pipeline.py  pyproject.toml
module-one-data-ingestion/: README.md  data_ingestion.py  docker-compose.yml  pyproject.toml  settings.env  settings.py  trips_queries.sql
module-one-data-ingestion/data/: taxi_zone_lookup.csv
module-one-data-ingestion/terraform/: main.tf  variables.tf
(+1566 files in other folders)
